# nusaOS

./: .gitignore  .gitmodules  .replit  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  guide.md  replit.md  structure.md  struktur.md
base/etc/: libui.conf  pond.conf
base/home/: calc.nsa  demo.nsa  demo_fileio.nsa  demo_syscall.nsa  demo_v25.nsa  fibo.nsa  fork.nsa  greet.nsa  hello.nusa  loop.nusa  string_index.nsa  student_grades.nsa  test_add_paren.nsa  test_syscall.nsa  test_v22.nsa  v253.nsa
docs/: INSTRUCTIONS.md  common_patterns.md  fasm-docs-english.md  fasm-docs-indonesia.md  nsa-docs-english.md  nsa-docs-indonesia.md  nsalang.md  nusalang.md  style.md
docs/app_guide/: app.md
docs/ping_test/: ping-test
docs/resize_png/: resize-png
kernel/: Atomic.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  IO.cpp  IO.h  KernelMapper.cpp  KernelMapper.h  Result.cpp  Result.hpp  User.cpp  User.h  bootlogo.h  kernel_c.cpp  kernel_c.h  keyboard.cpp  keyboard.h  kmain.cpp  kmain.h  power.c  power.h  random.cpp  random.h
kernel/api/: cdefs.h  ipv4.h  net.h
kernel/device/: ATA.h  BlockDevice.cpp  BlockDevice.h  CharacterDevice.cpp  CharacterDevice.h  Device.cpp  Device.h  DiskDevice.cpp  DiskDevice.h  I8042.cpp  I8042.h  KernelLogDevice.cpp  KernelLogDevice.h  KeyboardDevice.cpp  KeyboardDevice.h  MouseDevice.cpp  MouseDevice.h  MultibootVGADevice.cpp  MultibootVGADevice.h  NullDevice.cpp  NullDevice.h  PartitionDevice.cpp  PartitionDevice.h  RandomDevice.cpp  RandomDevice.h  VGADevice.cpp  VGADevice.h  ZeroDevice.cpp  ZeroDevice.h
kernel/filesystem/: DirectoryEntry.cpp  DirectoryEntry.h  File.cpp  File.h  FileBasedFilesystem.cpp  FileBasedFilesystem.h  FileDescriptor.cpp  FileDescriptor.h  Filesystem.cpp  Filesystem.h  Inode.cpp  Inode.h  InodeFile.cpp  InodeFile.h  InodeMetadata.cpp  InodeMetadata.h  LinkedInode.cpp  LinkedInode.h  Pipe.cpp  Pipe.h  VFS.cpp  VFS.h
kernel/interrupt/: IRQHandler.cpp  IRQHandler.h  interrupt.h
kernel/kstd/: KLog.h  circular_queue.hpp  cstring.cpp  cstring.h  defines.h  icxxabi.cpp  icxxabi.h  kstddef.cpp  kstddef.h  kstdio.cpp  kstdio.h  kstdlib.cpp  kstdlib.h  map.hpp  pair.hpp  queue.hpp  string.cpp  string.h  type_traits.h  types.h  unix_types.h  utility.h  vector.hpp
kernel/memory/: AnonymousVMObject.cpp  InodeVMObject.cpp  MemoryManager.cpp  MemoryManager.h  Stack.h  VMObject.cpp  kliballoc.h  liballoc.cpp
kernel/net/: E1000Adapter.cpp  ICMP.h  ICMPSocket.cpp  ICMPSocket.h  IPSocket.cpp  IPSocket.h  NetworkAdapter.cpp  NetworkManager.cpp  Socket.cpp  UDPSocket.cpp
kernel/pci/: PCI.cpp  PCI.h
kernel/syscall/: exec.cpp  fork.cpp  futex.cpp  ptrace.cpp  syscall.cpp  syscall.h  syscall_numbers.h  thread.cpp  uname.cpp  waitpid.cpp
kernel/tasking/: Blocker.cpp  Blocker.h  BooleanBlocker.cpp  BooleanBlocker.h  ELF.cpp  ELF.h  JoinBlocker.cpp  JoinBlocker.h  Lock.cpp  Lock.h  Mutex.cpp  Mutex.h  PollBlocker.cpp  PollBlocker.h  Process.cpp  Process.h  ProcessArgs.cpp  ProcessArgs.h  Signal.cpp  Signal.h  SleepBlocker.cpp  SleepBlocker.h  TSS.h  (+6 more)
libraries/: CMakeLists.txt
libraries/ld/: CMakeLists.txt  ld.cpp
ports/: ports.sh
programs/: CMakeLists.txt
programs/applications/desktop/: CMakeLists.txt  Desktop.cpp  Desktop.h  DesktopWidget.cpp  DesktopWidget.h  main.cpp
programs/applications/desktop/resources/: app.conf
programs/lua/: CMakeLists.txt  loslib.c  luaconf.h
programs/nbuild/: CMakeLists.txt  nbuild.asm  stub.c
programs/nsa-lang/: CMakeLists.txt  LICENSE.txt  README.md
programs/nsa-lang/include/: nsa_compiler.h  nsa_lexer.h  nsa_opcodes.h  nsa_parse_process.h  nsa_vm.h
programs/nsa-lang/src/: main.cpp  nsa_compiler.cpp  nsa_lexer.cpp  nsa_vm.cpp  runtime.cpp
programs/nusa-lang/: CMakeLists.txt
programs/nusa-lang/include/: nusa_compiler.h  nusa_lexer.h  nusa_opcodes.h  nusa_vm.h
programs/nusa-lang/src/: main.cpp  nusa_compiler.cpp  nusa_lexer.cpp  nusa_vm.cpp
scripts/: base-system.sh  base-system.tcl  bootlogo.py  debugd.py  grub.cfg  image.sh  image.tcl  kernel-map.tcl  nusaos.tcl  qemu.sh  qemu.tcl  version.sh  version.tcl
toolchain/: CMakeToolchain.txt.in  binutils-2.41.patch  build-ext2-fuse.sh  build-toolchain.sh  gcc-13.2.0.patch  toolchain-common.sh
(+519 files in other folders)
