SET(SOURCES ld.cpp main.S)
set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-Wall")
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall")
set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "-static")
set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-static")

ADD_EXECUTABLE(ld-nusaos.so ${SOURCES})
SET(LINKER_SCRIPT ${CMAKE_SOURCE_DIR}/libraries/ld/ld-nusaos.ld)
ADD_DEPENDENCIES(ld-nusaos.so libc)
SET_TARGET_PROPERTIES(ld-nusaos.so PROPERTIES LINK_DEPENDS ${LINKER_SCRIPT})
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -T ${LINKER_SCRIPT}")
TARGET_LINK_LIBRARIES(ld-nusaos.so gcc libnusa_static libexec_static)
INSTALL(TARGETS ld-nusaos.so RUNTIME DESTINATION lib)